<resources>
    <string name="app_name">Tugas 1</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="logo_upn">logo upn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="banner">banner</string>
    <string name="example_blog">Example Blog</string>
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. \n It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
</resources>