<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/img_upn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_upn"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/register" />
    </RelativeLayout>

</LinearLayout>