<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_blog"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/example_blog"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/date_blog"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="23 March 2020"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        android:contentDescription="@string/banner"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/content_blog"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>